adição de texto

--- a/Site teste/index.html
+++ b/Site teste/index.html
@@ -17,6 +17,11 @@
 
     <hr>
 
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat quisquam nemo error nostrum, amet sunt eaque culpa blanditiis provident nihil, voluptatem ipsam, repellendus dolorum explicabo numquam incidunt illo at debitis?    
+    </p>
+
+    <hr>
+
 </body>
 
 </html>
